header-button class is added, burger button added.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                     </a>
                 </li>
             </ul>
+            <button class="header-button is-open">
+                <svg width="40" height="40" aria-label="перемикач мобільного меню">
+                    <use class="header-button__icon header-button__icon--cross" href="./image/icons.svg#burger-menu-close"></use>
+                    <use class="header-button__icon header-button__icon--menu" href="./image/icons.svg#burger-menu-open"></use>
+                </svg>
+            </button>
         </div>
     </header>
         <!-- Main section -->
