--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </a>
                 </li>
             </ul>
-            <button class="header-button is-open">
+            <button type="button" class="header-button is-open" aria-expanded="false" data-menu-button>
                 <svg width="40" height="40" aria-label="перемикач мобільного меню">
                     <use class="header-button__icon header-button__icon--cross" href="./image/icons.svg#burger-menu-close"></use>
                     <use class="header-button__icon header-button__icon--menu" href="./image/icons.svg#burger-menu-open"></use>
@@ -443,5 +443,6 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
 </body>
 </html>
