mobile styles added

--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
     <!-- Header section -->
     <header class="header">
         <div class="header__content">
+            <div class="logo"><a class="logo__label" href="./index.html" target="_self"><span class="logo__text">Web</span>Studio</a></div>
             <nav class="header__navigation">
-                <div class="logo"><a class="logo__label" href="./index.html" target="_self"><span class="logo__text">Web</span>Studio</a></div>
                 <ul class="header-nav header-nav--positioning">
                     <li class="header-nav__item"><a class="header-nav__link header-nav__link--decoration header-nav__link--current" href="./index.html" target="_self">Студія</a></li>
                     <li class="header-nav__item"><a class="header-nav__link header-nav__link--decoration" href="./portfolio.html" target="_self">Портфоліо</a></li>
                     <li class="header-nav__item"><a class="header-nav__link header-nav__link--decoration" href="/">Контакти</a></li>
                 </ul>
-            </nav>
             <ul class="header-contact">
                 <li class="header-contact__item">
                     <a href="mailto:info@devstudio.com" class="header-contact__link header-contact__link--decoration">
@@ -43,6 +42,7 @@
                     </a>
                 </li>
             </ul>
+            </nav>
             <button type="button" class="header-button is-open" aria-expanded="false" data-menu-button>
                 <svg width="40" height="40" aria-label="перемикач мобільного меню">
                     <use class="header-button__icon header-button__icon--cross" href="./image/icons.svg#burger-menu-close"></use>
@@ -62,7 +62,7 @@
             </section>
             
             <!--Advantages section-->
-            <section class="advantages padding--top">
+            <section class="advantages">
                 <h2 class="visually-hidden">Переваги</h2> <!-- логічний заголовок -->
                 <ul class="advantages__list">
                     <li class="advantages__item">
@@ -107,7 +107,7 @@
             </section>
 
             <!-- Wokring profiles -->
-            <section class="working padding--bottom">
+            <!-- <section class="working padding--bottom">
                 <h2 class="working__title working__title--decoration padding--top">Чим ми займаємося</h2>
                 <ul class="working__list">
                     <li class="working__item">
@@ -129,14 +129,14 @@
                         </div>
                     </li>
                 </ul>
-            </section>
+            </section> -->
 
             <!-- Team Section -->
             <section class="team-block padding--top padding--bottom">
                 <h2 class="team-block__topic">Наша команда</h2>
                 <ul class="team-block__list">
                     <li class="team-block__item">
-                        <img class="team-block__image" src="./image/team-member1.jpg" alt="Ihor Demianenko profile" width="270">
+                        <img class="team-block__image" src="./image/mobile-img.jpg" alt="Ihor Demianenko profile" width="450">
                         <div class="developer ">
                             <h3 class="developer__name">Ігор Дем'яненко</h3>
                             <p class="developer__position">Product Designer</p>
@@ -173,7 +173,7 @@
                         </div>
                     </li>
                     <li class="team-block__item">
-                        <img class="team-block__image" src="./image/team-member2.jpg" alt="Olga Repina profile" width="270">
+                        <img class="team-block__image" src="./image/mobile-img1.jpg" alt="Olga Repina profile" width="450">
                         <div class="developer">
                             <h3 class="developer__name">Ольга Рєпіна</h3>
                             <p class="developer__position">Frontend Developer</p>
@@ -210,7 +210,7 @@
                         </div>
                     </li>
                     <li class="team-block__item">
-                        <img class="team-block__image" src="./image/team-member3.jpg" alt="Mykola Tarasov profile" width="270">
+                        <img class="team-block__image" src="./image/mobile-img2.jpg" alt="Mykola Tarasov profile" width="450">
                         <div class="developer">
                             <h3 class="developer__name">Микола Тарасов</h3>
                             <p class="developer__position">Marketing</p>
@@ -247,7 +247,7 @@
                         </div>
                     </li>
                     <li class="team-block__item">
-                        <img class="team-block__image" src="./image/team-member4.jpg" alt="Nykhaylo Ermakov profile" width="270">
+                        <img class="team-block__image" src="./image/mobile-img3.jpg" alt="Nykhaylo Ermakov profile" width="450">
                         <div class="developer">
                             <h3 class="developer__name">Михайло Єрмаков</h3>
                             <p class="developer__position">UI Designer</p>
