header section done

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="header__content">
             <div class="logo"><a class="logo__label" href="./index.html" target="_self"><span class="logo__text">Web</span>Studio</a></div>
             <nav class="header__navigation">
-                <ul class="header-nav header-nav--positioning">
-                    <li class="header-nav__item"><a class="header-nav__link header-nav__link--decoration header-nav__link--current" href="./index.html" target="_self">Студія</a></li>
-                    <li class="header-nav__item"><a class="header-nav__link header-nav__link--decoration" href="./portfolio.html" target="_self">Портфоліо</a></li>
-                    <li class="header-nav__item"><a class="header-nav__link header-nav__link--decoration" href="/">Контакти</a></li>
+                <ul class="header-nav">
+                    <li class="header-nav__item"><a class="header-nav__link header-nav__link--current" href="./index.html" target="_self">Студія</a></li>
+                    <li class="header-nav__item"><a class="header-nav__link" href="./portfolio.html" target="_self">Портфоліо</a></li>
+                    <li class="header-nav__item"><a class="header-nav__link" href="/">Контакти</a></li>
                 </ul>
             <ul class="header-contact">
                 <li class="header-contact__item">
