header and hero partly done

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                     <div class="policy">
                         <label class="policy__label">
                             <input class="policy__input" type="checkbox" name="contacts">
-                            <span class="policy__text"></span>Погоджуюся з розсилкою та приймаю <a class="policy__link" href="#"> Умови договору</a>
+                            <span class="policy__inputbox"></span><span class="policy__text">Погоджуюся з розсилкою та приймаю</span><a class="policy__link" href="#">Умови договору</a>
                         </label>
                     </div>
                     
