--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
             </section> -->
 
             <!-- Team Section -->
-            <section class="team-block padding--top padding--bottom">
+            <section class="team-block">
                 <h2 class="team-block__topic">Наша команда</h2>
                 <ul class="team-block__list">
                     <li class="team-block__item">
                         <img class="team-block__image" src="./image/mobile-img.jpg" alt="Ihor Demianenko profile" width="450">
-                        <div class="developer ">
+                        <div class="developer">
                             <h3 class="developer__name">Ігор Дем'яненко</h3>
                             <p class="developer__position">Product Designer</p>
                             <ul class="social">
@@ -287,7 +287,7 @@
             </section>
             <!-- Works section -->
             <section class="our-works">
-                <div class="our-works__content padding--top padding--bottom">
+                <div class="our-works__content">
                     <h2 class="our-works__topic">Постійні клієнти</h2>
                     <ul class="our-works__list">
                         <li class="our-works__item">
